<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="MissingPrefix"
    >

  <ImageView
      android:id="@+id/id_im_logo"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentTop="true"
      android:layout_centerHorizontal="true"
      android:layout_marginTop="55dp"
      android:contentDescription="@string/app_name"
      app:srcCompat="@mipmap/ic_launcher"
      />

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_centerVertical="true"
      android:gravity="center"
      android:orientation="vertical"

      >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/select_your_language"
        android:textColor="@android:color/black"
        android:textSize="@dimen/large"
        fontPath="fonts/roboto-bold.ttf"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:orientation="vertical"
        >
      <TextView
          android:id="@+id/id_tv_english"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginBottom="12dp"
          android:background="@drawable/shape_round_cornered"
          android:gravity="center"
          android:padding="10dp"
          android:text="@string/english"
          android:textColor="@android:color/black"
          android:textSize="@dimen/medium"
          />
      <TextView
          android:id="@+id/id_tv_telugu"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginBottom="12dp"
          android:background="@drawable/shape_round_cornered"
          android:gravity="center"
          android:padding="10dp"
          android:text="@string/telugu"
          android:textColor="@android:color/black"
          android:textSize="@dimen/medium"
          />
      <TextView
          android:id="@+id/id_tv_hindi"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:background="@drawable/shape_round_cornered"
          android:gravity="center"
          android:padding="10dp"
          android:text="@string/hindi"
          android:textColor="@android:color/black"
          android:textSize="@dimen/medium"
          />
    </LinearLayout>
  </LinearLayout>

</RelativeLayout>
