<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    >
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      >
    <ImageView
        android:id="@+id/id_close_dialog"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_gravity="end"
        android:background="?android:attr/selectableItemBackground"
        android:contentDescription="@string/close_otp_reading_screen"
        android:padding="5dp"
        android:src="@drawable/ic_close"
        />
    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:text="OTP Successfully sent to "
        android:textColor="@android:color/black"
        android:textSize="@dimen/xlarge"
        tools:text="OTP Successfully sent to "
        />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:drawablePadding="5dp"

        android:gravity="center"
        android:padding="10dp"
        android:text="@string/text_phone_number"
        android:textSize="@dimen/large"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:text="@string/header_enter_otp"
        android:textColor="@android:color/black"
        android:textSize="40sp"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        >
      <EditText
          android:id="@+id/id_ed_first_otp_char"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginEnd="5dp"
          android:layout_marginRight="5dp"
          android:inputType="number"
          android:maxLength="1"
          android:minWidth="50dp"
          android:textSize="80sp"
          tools:text="9"
          />
      <EditText
          android:id="@+id/id_ed_second_otp_char"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginEnd="5dp"
          android:layout_marginRight="5dp"
          android:inputType="number"
          android:maxLength="1"
          android:minWidth="50dp"
          android:textSize="80sp"
          />
      <EditText
          android:id="@+id/id_ed_third_otp_char"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginEnd="5dp"
          android:layout_marginRight="5dp"
          android:inputType="number"
          android:maxLength="1"
          android:minWidth="50dp"
          android:textSize="80sp"
          tools:text="9"
          />
      <EditText
          android:id="@+id/id_ed_fourth_otp_char"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:inputType="number"
          android:maxLength="1"
          android:minWidth="50dp"
          android:textSize="80sp"
          tools:text="9"
          />

    </LinearLayout>

    <TextView
        android:id="@+id/id_otp_verfication_acknowlegement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:text="You have entered wrong OTP"
        android:textSize="@dimen/medium"
        android:visibility="gone"
        />
    <Button
        android:id="@+id/id_btn_send_otp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/shape_round_cornered"
        android:padding="20dp"
        android:text="Re-Send OTP"
        />
  </LinearLayout>
</ScrollView>
